--- a/www.dz-rs.si/866fac75040f2f592a66895c4e2d0a332b84f884.yml
+++ b/www.dz-rs.si/866fac75040f2f592a66895c4e2d0a332b84f884.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:53:00 GMT
+    - Mon, 02 Apr 2018 08:53:19 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000rt5fkTT5NkGDu489awqv-OQ:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000QpjVNfYcewEVm3jFhK9vTBv:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441890;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=af561ea8;default;FP4->56;C003;
+    - F7360B2047A90E4D;87d9ab10;745329;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->56;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441890)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-745329)
     Content-Length:
-    - '13206'
+    - '13168'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:52:58 GMT
+recorded_at: Mon, 02 Apr 2018 08:53:18 GMT
