--- a/www.dz-rs.si/84e3f18ec6cf0a5586155075e3319d4bf4c350bf.yml
+++ b/www.dz-rs.si/84e3f18ec6cf0a5586155075e3319d4bf4c350bf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:53:09 GMT
+    - Mon, 02 Apr 2018 08:53:33 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000qbXcpEPrQm4GC2V50etJxL1:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000Uy8i7bjgJ0mXUeEORm3aSva:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441912;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=af561ea8;default;FP4->55;C003;
+    - F7360B2047A90E4D;87d9ab10;745391;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->57;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441912)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-745391)
     Content-Length:
-    - '12920'
+    - '12884'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:53:07 GMT
+recorded_at: Mon, 02 Apr 2018 08:53:31 GMT
