--- a/www.dz-rs.si/dc894ccae73b1618617f356b66e1dd89b5d33289.yml
+++ b/www.dz-rs.si/dc894ccae73b1618617f356b66e1dd89b5d33289.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:53:22 GMT
+    - Mon, 02 Apr 2018 08:53:47 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000jP94IctJGEh8DA9xSQBmyKz:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=000039y9tRvJRVg8oAc7BfVEH4y:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441945;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=af561ea8;default;FP4->425;C003;
+    - F7360B2047A90E4D;87d9ab10;745439;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->61;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441945)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-745439)
     Content-Length:
-    - '14191'
+    - '14085'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:53:20 GMT
+recorded_at: Mon, 02 Apr 2018 08:53:45 GMT
