--- a/www.dz-rs.si/4983de745cf0438b7d625acafb6e4bf206f3c4fe.yml
+++ b/www.dz-rs.si/4983de745cf0438b7d625acafb6e4bf206f3c4fe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:53:32 GMT
+    - Mon, 02 Apr 2018 08:53:57 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00003pM_lRBcPSjriqRL5asdaPF:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000UenszEFlBANITis5B4k28SJ:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441992;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=af561ea8;default;FP4->51;C003;
+    - F7360B2047A90E4D;87d9ab10;745465;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->73;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441992)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-745465)
     Content-Length:
-    - '13034'
+    - '12997'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:53:30 GMT
+recorded_at: Mon, 02 Apr 2018 08:53:55 GMT
