--- a/www.dz-rs.si/191c6a21bdd36e6fea889aec5e2b33fbd94ad7af.yml
+++ b/www.dz-rs.si/191c6a21bdd36e6fea889aec5e2b33fbd94ad7af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:36:25 GMT
+    - Tue, 03 Apr 2018 04:16:32 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000chf2LMvzsfiHnxsnrMYA5MJ:-1; Path=/; HttpOnly
+    - JSESSIONID=00003VHE1wI1EGYFihA_WXAcwoG:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;740619;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->58;C003;
+    - F7360B2047A90E4D;87d9ab10;1102012;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->114;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-740619)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1102012)
     Content-Length:
     - '13044'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:36:23 GMT
+recorded_at: Tue, 03 Apr 2018 04:16:32 GMT
