--- a/www.dz-rs.si/58506b5b8c3b5295fb8f689bf15d37c0091c3cf2.yml
+++ b/www.dz-rs.si/58506b5b8c3b5295fb8f689bf15d37c0091c3cf2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:36:46 GMT
+    - Tue, 03 Apr 2018 04:17:01 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000H90hIIy6wxlOi_V-Vq92WQH:-1; Path=/; HttpOnly
+    - JSESSIONID=0000ADLCVriPv2mB-hX4500IV2a:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;740744;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->67;C003;
+    - F7360B2047A90E4D;87d9ab10;1102270;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->317;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-740744)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1102270)
     Content-Length:
-    - '12838'
+    - '12869'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:36:44 GMT
+recorded_at: Tue, 03 Apr 2018 04:16:58 GMT
