--- a/www.dz-rs.si/744f9afd643006b458266f7ce210b28620f47b87.yml
+++ b/www.dz-rs.si/744f9afd643006b458266f7ce210b28620f47b87.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:37:38 GMT
+    - Tue, 03 Apr 2018 04:17:51 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000ko_M5bpb7x3AOEdfAYfEhHW:-1; Path=/; HttpOnly
+    - JSESSIONID=0000I_ZZvedCpM8_Cz4LR6ciiq2:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;741035;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->57;C003;
+    - F7360B2047A90E4D;87d9ab10;1102639;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->128;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741035)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1102639)
     Content-Length:
-    - '12390'
+    - '12392'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:37:36 GMT
+recorded_at: Tue, 03 Apr 2018 04:17:48 GMT
