--- a/www.dz-rs.si/dbb4afa472a60801c1c30ba56808556d6e122947.yml
+++ b/www.dz-rs.si/dbb4afa472a60801c1c30ba56808556d6e122947.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:38:12 GMT
+    - Tue, 03 Apr 2018 04:18:34 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00001pKtFbFBry606rUaM9-Un2l:-1; Path=/; HttpOnly
+    - JSESSIONID=0000nKN_jkhVuxsr8MsImbkrYqp:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;741185;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->61;C003;
+    - F7360B2047A90E4D;87d9ab10;1102861;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->89;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741185)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1102861)
     Content-Length:
-    - '12737'
+    - '12734'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:38:09 GMT
+recorded_at: Tue, 03 Apr 2018 04:18:31 GMT
