--- a/www.dz-rs.si/81bd5cba90e6b8bc25edbd06dfa4f0861c7e2ce3.yml
+++ b/www.dz-rs.si/81bd5cba90e6b8bc25edbd06dfa4f0861c7e2ce3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:38:21 GMT
+    - Tue, 03 Apr 2018 04:18:45 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00005VwsAskaQIp4hauFX9Ic5pd:-1; Path=/; HttpOnly
+    - JSESSIONID=00000DXrEJuvqP8CDSbKFBVdAjp:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;741275;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->132;C003;
+    - F7360B2047A90E4D;87d9ab10;1102894;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->71;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741275)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1102894)
     Content-Length:
-    - '12739'
+    - '12699'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:38:19 GMT
+recorded_at: Tue, 03 Apr 2018 04:18:42 GMT
