--- a/www.dz-rs.si/a44bee10da7350772adc62d5e510f23c87dea420.yml
+++ b/www.dz-rs.si/a44bee10da7350772adc62d5e510f23c87dea420.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:38:44 GMT
+    - Tue, 03 Apr 2018 04:19:13 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000CM8RUGrrNOUpj1KHZP50_PB:-1; Path=/; HttpOnly
+    - JSESSIONID=00000f_FWB6fovhodCyXhWwI7Fc:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;741372;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->72;C003;
+    - F7360B2047A90E4D;87d9ab10;1102976;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->61;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741372)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1102976)
     Content-Length:
     - '13039'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:38:41 GMT
+recorded_at: Tue, 03 Apr 2018 04:19:10 GMT
