--- a/www.dz-rs.si/1adf5a099b487184e68812f0266f08ff43357a76.yml
+++ b/www.dz-rs.si/1adf5a099b487184e68812f0266f08ff43357a76.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:38:54 GMT
+    - Tue, 03 Apr 2018 04:19:26 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000QiwpUYOGbiZ2jNz4ye2RdwM:-1; Path=/; HttpOnly
+    - JSESSIONID=0000-6rhJE9IPdA9RTwGtr7UQz7:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;741413;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->74;C003;
+    - F7360B2047A90E4D;87d9ab10;1103019;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->70;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741413)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1103019)
     Content-Length:
-    - '13287'
+    - '13289'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:38:52 GMT
+recorded_at: Tue, 03 Apr 2018 04:19:24 GMT
