--- a/www.dz-rs.si/9e2bf66be2bffc086db59af577e5420d76ebb03f.yml
+++ b/www.dz-rs.si/9e2bf66be2bffc086db59af577e5420d76ebb03f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:39:07 GMT
+    - Tue, 03 Apr 2018 04:19:40 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000m1rbrz9wjsMSyuPkK-JKsMJ:-1; Path=/; HttpOnly
+    - JSESSIONID=0000NR3VcaNLElk5nytmDhXLqRf:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;741460;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->58;C003;
+    - F7360B2047A90E4D;87d9ab10;1103099;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->68;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741460)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1103099)
     Content-Length:
-    - '12820'
+    - '12822'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:39:05 GMT
+recorded_at: Tue, 03 Apr 2018 04:19:38 GMT
