--- a/www.dz-rs.si/8e6c1eae437a302813242ca38e7500ae79e02267.yml
+++ b/www.dz-rs.si/8e6c1eae437a302813242ca38e7500ae79e02267.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:39:35 GMT
+    - Tue, 03 Apr 2018 04:20:06 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000n8oTWfSELxySSELBsAo5Dps:-1; Path=/; HttpOnly
+    - JSESSIONID=0000pWGks09ouZXk5HI1bXPPdgV:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;741614;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->58;C003;
+    - F7360B2047A90E4D;87d9ab10;1103212;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->71;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741614)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1103212)
     Content-Length:
     - '12790'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:39:34 GMT
+recorded_at: Tue, 03 Apr 2018 04:20:05 GMT
