--- a/www.dz-rs.si/13d2885dd2e350a2d7051b9d575cd39182e3d979.yml
+++ b/www.dz-rs.si/13d2885dd2e350a2d7051b9d575cd39182e3d979.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:40:39 GMT
+    - Tue, 03 Apr 2018 04:21:25 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00006zj7geCZvO_OubyuGwb5jx6:-1; Path=/; HttpOnly
+    - JSESSIONID=00008s2POFtuF6MOYiW_AE7bW5i:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;741873;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->63;C003;
+    - F7360B2047A90E4D;87d9ab10;1103461;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->104;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741873)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1103461)
     Content-Length:
-    - '13016'
+    - '13014'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:40:38 GMT
+recorded_at: Tue, 03 Apr 2018 04:21:23 GMT
