--- a/www.dz-rs.si/22a14305a5cbb367a3ec7d9ae71aed2cb7dae536.yml
+++ b/www.dz-rs.si/22a14305a5cbb367a3ec7d9ae71aed2cb7dae536.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:40:52 GMT
+    - Tue, 03 Apr 2018 04:21:33 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000zPBVtKDIsyhtiAe6TOUKP-L:-1; Path=/; HttpOnly
+    - JSESSIONID=0000cb2oa__DLG5Fvbm_HGzN61b:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;741912;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->84;C003;
+    - F7360B2047A90E4D;87d9ab10;1103487;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->68;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741912)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1103487)
     Content-Length:
-    - '13083'
+    - '13082'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:40:50 GMT
+recorded_at: Tue, 03 Apr 2018 04:21:32 GMT
