--- a/www.dz-rs.si/9a13af929001c5e9675c9dbced74f8f9eb2e139e.yml
+++ b/www.dz-rs.si/9a13af929001c5e9675c9dbced74f8f9eb2e139e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:41:16 GMT
+    - Tue, 03 Apr 2018 04:22:00 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00007OEzlPNn9vf0yAa1n8Tnqzv:-1; Path=/; HttpOnly
+    - JSESSIONID=0000ruSrh6Kk01N9JYJkG6vCafj:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;741976;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->61;C003;
+    - F7360B2047A90E4D;87d9ab10;1103618;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->77;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741976)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1103618)
     Content-Length:
-    - '14667'
+    - '14666'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:41:14 GMT
+recorded_at: Tue, 03 Apr 2018 04:21:58 GMT
