--- a/www.dz-rs.si/39e1fe0c23aa5e53ab6f29c0db974f037f5a8f8b.yml
+++ b/www.dz-rs.si/39e1fe0c23aa5e53ab6f29c0db974f037f5a8f8b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:42:06 GMT
+    - Tue, 03 Apr 2018 04:22:51 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000REXIhEncl_g5IgMYQ1fa1Ru:-1; Path=/; HttpOnly
+    - JSESSIONID=0000VOByjune2AZt6KOLfyUg5p5:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;742248;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->56;C003;
+    - F7360B2047A90E4D;87d9ab10;1103929;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->18;EvalII->18;CHd;FP2->18;WS=fd938310;default;FP4->173;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742248)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1103929)
     Content-Length:
     - '12418'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:42:04 GMT
+recorded_at: Tue, 03 Apr 2018 04:22:50 GMT
