--- a/www.dz-rs.si/eb9ccbcdb95dae4afef4e99207ff3bd5b6cb3379.yml
+++ b/www.dz-rs.si/eb9ccbcdb95dae4afef4e99207ff3bd5b6cb3379.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:42:33 GMT
+    - Tue, 03 Apr 2018 04:23:18 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000C7EZttChofJ6DcNajNfxaPH:-1; Path=/; HttpOnly
+    - JSESSIONID=0000EK_PXHgWImR_BbpgKP9yVED:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;742350;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->58;C003;
+    - F7360B2047A90E4D;87d9ab10;1104069;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->60;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742350)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1104069)
     Content-Length:
     - '12826'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:42:31 GMT
+recorded_at: Tue, 03 Apr 2018 04:23:17 GMT
