--- a/www.dz-rs.si/da7f65fc1f643427981b00fb9a061f2b9b1b9f36.yml
+++ b/www.dz-rs.si/da7f65fc1f643427981b00fb9a061f2b9b1b9f36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:43:20 GMT
+    - Tue, 03 Apr 2018 04:24:04 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000Sar3M6p8eDrqw9la3tzlmUI:-1; Path=/; HttpOnly
+    - JSESSIONID=0000clsjM27OacetPi7XBouLueJ:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;742513;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=fd938310;default;FP4->466;C003;
+    - F7360B2047A90E4D;87d9ab10;1104220;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->62;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742513)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1104220)
     Content-Length:
     - '14297'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:43:18 GMT
+recorded_at: Tue, 03 Apr 2018 04:24:03 GMT
