--- a/www.dz-rs.si/2e87b578e8da6c7b35acff52b1925aa51577b5e7.yml
+++ b/www.dz-rs.si/2e87b578e8da6c7b35acff52b1925aa51577b5e7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:44:31 GMT
+    - Tue, 03 Apr 2018 04:25:16 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000ZQPB_kjk4rnI7SNk8Tz0frE:-1; Path=/; HttpOnly
+    - JSESSIONID=0000mf1J6sxtgJ4RFLLWjgfNFml:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;742918;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->53;C003;
+    - F7360B2047A90E4D;87d9ab10;1104465;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->70;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742918)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1104465)
     Content-Length:
-    - '13148'
+    - '13144'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:44:30 GMT
+recorded_at: Tue, 03 Apr 2018 04:25:14 GMT
