--- a/www.dz-rs.si/320206b18c9eac35bcaa17b905f2f4c5420b159e.yml
+++ b/www.dz-rs.si/320206b18c9eac35bcaa17b905f2f4c5420b159e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:45:28 GMT
+    - Tue, 03 Apr 2018 04:26:04 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000iOnAObLZtllMamnsORvr9Ai:-1; Path=/; HttpOnly
+    - JSESSIONID=0000lQHwAGMpbvLyqPmG-sZNlDO:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;743141;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->60;C003;
+    - F7360B2047A90E4D;87d9ab10;1104695;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->13;EvalII->13;CHd;FP2->13;WS=fd938310;default;FP4->134;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743141)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1104695)
     Content-Length:
     - '13001'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:45:26 GMT
+recorded_at: Tue, 03 Apr 2018 04:26:02 GMT
